# Claude-CRM

./: .env.example  .env.production  .gitignore  .pre-commit-config.yaml  ADMIN_ISSUES_TODO.md  ANALYSIS_COMPLETION_REPORT.md  ANALYSIS_QUICK_REFERENCE.md  ANALYTICS_DATA_MODEL.md  ANALYTICS_EVOLUTION_SUMMARY.md  ARCHITECTURE_DIAGRAM.md  ARCHITECTURE_SCAFFOLDING_SUMMARY.md  ASSESSMENT_RESULTS.txt  ASSESSMENT_SUMMARY.md  BACKEND_FRONTEND_ALIGNMENT_ANALYSIS.md  BACKEND_FRONTEND_ALIGNMENT_COMPLETE.md  BLUEPRINT_ALIGNMENT_ANALYSIS.md  BLUEPRINT_COMPLIANCE_REPORT.md  CELERY_TASKS_VERIFICATION.md  CODE_ENHANCEMENTS_SUMMARY.md  CODE_METRICS_ANALYSIS.md  CODE_QUALITY_REPORT.md  COMPLIANCE_DOCUMENTATION.md  COMPLIANCE_IMPLEMENTATION_SUMMARY.md  COMPREHENSIVE_CRM_COMPARISON.md  COMPREHENSIVE_SYSTEM_ANALYSIS.md  CRM Multi Tenant_content.txt  CRM Multi Tenant_content_advanced.txt  CRM_COMPARISON_SALESFORCE.md  CRM_COMPARISON_ZOHO.md  CRM_GAP_ANALYSIS_IMPLEMENTATION.md  CRM_SYSTEM_ASSESSMENT.md  CRM_SYSTEM_COMPARISON.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_CHECKLIST_DO.md  DEPLOYMENT_DOCS_INDEX.md  DEPLOYMENT_FINAL_STATUS.md  DEPLOYMENT_GUIDE_ANALYTICS.md  DEPLOYMENT_IMPLEMENTATION_SUMMARY.md  DEPLOYMENT_READINESS.md  DEPLOYMENT_READINESS_ASSESSMENT.md  (+121 more)
activities/: __init__.py  admin.py  admin.py.bak  admin_backup.py  admin_simple.py  models.py  serializers.py  urls.py  views.py
ai_assistant/: apps.py  models.py  serializers.py  urls.py  views.py
ai_scoring/: admin.py  apps.py  assignment_engine_advanced.py  assignment_intelligence.py  assignment_model.py  drift_detection.py  drift_detection_advanced.py  enrichment_intent.py  lightgbm_pipeline.py  ml_models.py  models.py  serializers.py  shap_explainability.py  shap_production.py  urls.py  views.py
analytics/: ANALYTICS_EVOLUTION_README.md  admin.py  anomaly_detection.py  data_quality.py  fuzzy_dedupe_queue.py  hybrid_ranking.py  hybrid_search_fusion.py  incremental_aggregates.py  metrics_catalog.py  models.py  report_scheduling.py  reporting_optimization.py  search_optimization.py  serializers.py  serializers_extended.py  services.py  tasks.py  time_series.py  urls.py  urls_extended.py  vector_search.py  views.py  views_extended.py
api_gateway/: nginx.conf
api_versioning/: __init__.py  admin.py  apps.py  models.py  serializers.py  urls.py  views.py
audit/: __init__.py  admin.py  apps.py  models.py  serializers.py  urls.py  views.py
compliance/: __init__.py  access_review.py  admin.py  apps.py  dsr_processor.py  encryption.py  models.py  policy_engine.py  policy_validator.py  retention_engine.py  serializers.py  tasks.py  tests.py  urls.py  views.py
config/: __init__.py  api_docs.py  asgi.py  celery.py  settings.py  urls.py  wsgi.py
core/: admin.py  admin_backup.py  admin_simple.py  ai_insights.py  analytics.py  api_responses.py  backup_recovery.py  cache.py  cache_strategies.py  custom_field_service.py  database.py  error_handling.py  event_bus.py  exceptions.py  logging_config.py  middleware.py  models.py  models_saved_views.py  monitoring.py  multi_currency.py  notifications.py  observability.py  performance.py  performance_optimization.py  permissions.py  permissions_models.py  permissions_service.py  prometheus_metrics.py  search_service.py  security.py  security_enhanced.py  serializers.py  serializers_saved_views.py  tenant_models.py  two_factor_auth.py  urls.py  validators.py  views.py  views_saved_views.py
crm/: __init__.py  admin.py  admin_backup.py  admin_simple.py  api_router.py  api_views.py  lead_scoring_service.py  (+5 more)
(+530 files in other folders)
